--- a/gtd/templates/gtd/reptask_list.html
+++ b/gtd/templates/gtd/reptask_list.html
@@ -4,7 +4,9 @@
     <h2>Rep Tasks</h2>
     <ul>
         {% for task in rep_task_list %}
-            <li>{{ task.text }}</li>
+            <li
+                    
+            >{{ task.text }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
