--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-{% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-{% bootstrap_messages %}
 {% load static %}
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 {#    <link rel="stylesheet" href="{% static 'custom.css' %}">#}
-{#    <script src="{% static 'js/jquery-3.7.0.min.js' %}"></script>#}
-{#    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>#}
-{#    <script src="{% static 'js/infinite.min.js' %}"></script>#}
+<script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
     <title>{% block title %}GTD{% endblock %}</title>
 </head>
 
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 <div class="container-lg mt-5">
     <div class="row">
 {#        <div class="col-sm-3 px-3 d-flex justify-content-end">#}
@@ -24,7 +20,6 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-{#    <script src="{% static 'bundle.js' %}"></script>#}
-
 </html>
