--- a/templates/base.html
+++ b/templates/base.html
@@ -3,19 +3,19 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-{#    <link rel="stylesheet" href="{% static 'custom.css' %}">#}
-<script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'custom.css' %}">
+    <script src="https://unpkg.com/htmx.org@1.9.11" integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0" crossorigin="anonymous"></script>
     <title>{% block title %}GTD{% endblock %}</title>
 </head>
 
-<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
-<div class="container-lg mt-5">
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' id="body-container">
+<div class="container-sm">
     <div class="row">
-{#        <div class="col-sm-3 px-3 d-flex justify-content-end">#}
-{#            {% include "menu.html" %}#}
-{#        </div>#}
-        <div class="col-sm-6 central-column">
+        <div class="col-12 mb-4 mt-2">
+            {% include "menu.html" %}
+        </div>
+        <div class="col-12">
             {% block content %}{% endblock %}
         </div>
     </div>
