--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,15 +1,16 @@
-<div class="row">
-    <div class="col-4 menu-link">
-        {% if task_list %}
+<div id="top-menu">
+    <div class="menu-link">
+        {% url 'gtd:tasks' as tasks_url %}
+        {% if request.path == tasks_url %}
             <a class="nav-link" href="{% url 'gtd:rep-tasks' %}">Rep Tasks</a>
         {% else %}
             <a class="nav-link" href="{% url 'gtd:tasks' %}">Tasks</a>
         {% endif %}
     </div>
-    <div class="col-4 menu-link">
+    <div class="menu-link">
         <a class="nav-link" href="#">Inbox</a>
     </div>
-    <div class="col-4 menu-link">
+    <div class="menu-link">
         <a class="nav-link" href="#" role="button">
             Coin
         </a>
